--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve-static": "^1.14.2",
     "vue": "^2.6.11",
     "vue-image-upload-resize": "^2.3.0",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.5.3",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.4.0"
